# GTLM

./: README.md  pyproject.toml  requirements.txt
configs/: gtlm_1_2b_a350m.example.json  train_base.json
docs/: architecture.md  model-card-summary.md  training.md
legacy/: PTLM_original.py
scripts/: train.py
src/gtlm/: __init__.py  checkpointing.py  cli.py  config.py  data.py  deepspeed_config.py  model.py  monitoring.py  trainer.py
tests/: test_config.py
