[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtlm-training"
version = "0.1.0"
description = "Training code and documentation for the GTLM sparse MoE language model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Gabriel Yogi" }
]
dependencies = [
  "torch>=2.1",
  "transformers>=4.40",
  "datasets>=2.18",
  "deepspeed>=0.14",
  "tqdm>=4.66",
  "safetensors>=0.4"
]

[project.optional-dependencies]
cuda = [
  "flash-attn",
  "liger-kernel"
]
dev = [
  "ruff>=0.4",
  "pytest>=8"
]

[project.scripts]
gtlm-train = "gtlm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
